# scribble

./: .clang-format  .gitignore  CMakeLists.txt  CodeOfConduct.md  Contributing.md  LICENSE  Manifesto.md  README.md  binder.c  binder.h  config.h.in  error.c  error.h  graph.c  graph.h  io.c  lexer.c  lexer.h  log.c  log.h  main.c  mem.c  mem.h  parser.c  parser.h  sv.c  type.c  type.h
rt/: CMakeLists.txt
rt/arch/Darwin/arm64/: alloc.s  close.s  endln.s  open.s  puthex.s  puti.s  putint.s  putln.s  puts.s  read.s  start.s  string_cmp.s  string_concat.s  string_eq.s  strlen.s  syscalls.inc  to_string.s  trampoline.s  write.s
rt/arch/Linux/aarch64/: alloc.s  endln.s  hello_world.s  open.s  puthex.s  putint.s  putln.s  puts.s  start.s  syscalls.inc  to_string.s  write.s
rt/arch/arm64/: CMakeLists.txt  alloc.s  endln.s  open.s  puthex.s  putint.s  putln.s  puts.s  start.s  to_string.s  trampoline.s  write.s
rt/arch/macos/aarch64/: putln.s  write.s
share/: std.scribble
src/: CMakeLists.txt  allocate.h  binder.c  binder.h  datum.c  datum.h  error.c  error.h  error_or.c  error_or.h  execute.c  execute.h  graph.c  graph.h  hash.c  hash.h  intermediate.c  intermediate.h  io.c  io.h  lexer.c  lexer.h  log.c  log.h  main.c  mem.c  mem.h  mutex.c  mutex.h  native.c  native.h  optional.h  options.c  options.h  parser.c  parser.h  process.c  process.h  rt.h  sl.c  (+6 more)
src/arch/arm64/: CMakeLists.txt  arm64.c  arm64.h  assembly.c  code.c  context.c  function.c  generate.c  inspector.c  operator.c  operator.h  scope.c  variable.c
src/base/: CMakeLists.txt  allocate.h  da.c  da.h  error_or.c  error_or.h  fmt.c  fmt.h  fn.c  fn.h  fs.c  fs.h  http.c  http.h  integer.c  integer.h  io.c  io.h  json.c  json.h  log.c  log.h  mem.c  mem.h  mutex.c  optional.h  options.c  options.h  process.c  process.h  resolve.c  resolve.h  sb.c  sl.c  ss.c  sv.c  sv.h  threadonce.h
src/base/test/: CMakeLists.txt  http_client.c  http_server.c
src/scribble/: CMakeLists.txt  backend.c  backend_main.c  binder.c  binder.h  datum.c  datum.h  debugger.c  debugger.h  engine.c  engine.h  execute.c  execute.h  frontend.c  graph.c  intermediate.c  intermediate.h  ir.c  ir.h  lexer.c  lexer.h  main.c  native.c  native.h  op.h  parser.c  parser.h  type.c  type.h
src/scribble/model/: error.c  error.h  op.c  op.h  syntaxnode.c  syntaxnode.h  token.c  token.h
test/: CMakeLists.txt
test/multi/: foo.scribble  main.scribble
test/scribble/: addition.json  addition.scribble  argv.scribble  assignment.scribble  break.scribble  concat.scribble  enum.scribble  fib.scribble  float.scribble  for.json  for.scribble  fortytwo.json  fortytwo.scribble  function.json  function.scribble  hello.json  hello.scribble  if.json  if.scribble  if_1.json  if_1.scribble  integer.json  integer.scribble  native.scribble  pointer.scribble  precedence.scribble  range.scribble  run_tests.py  scopes.scribble  shortcircuit.json  shortcircuit.scribble  shortcircuit_1.json  shortcircuit_1.scribble  static_message.scribble  string.scribble  struct.json  struct.scribble  subtract.scribble  ternary.json  ternary.scribble  (+7 more)
